--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_height="wrap_content"
         android:letterSpacing="-0.05"
         android:text="동동구리동동"
-        android:textColor="#000000"
+        android:textColor="@color/theme_text_color"
         android:textSize="32sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/guideline1"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:letterSpacing="-0.05"
         android:text="대한민국 서울만특별시"
-        android:textColor="#000000"
+        android:textColor="@color/theme_text_color"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@id/guideline1"
@@ -135,5 +135,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/check_time" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginEnd="23dp"
+        android:backgroundTint="@color/orange"
+        android:src="@drawable/icon_map"
+
+        app:borderWidth="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white" /> <!-- (외부 라이브러리라 자동 완성이 안됨)아이콘 색상 설정 -->
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_news"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:layout_marginStart="23dp"
+        android:backgroundTint="@color/orange"
+        android:src="@drawable/icon_newspaper"
+
+        app:borderWidth="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:tint="@color/white" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
